upgrade tools and fix lint errors